# deepseek-v3.2-pytorch

./: .gitignore  README.md  pyproject.toml  train.py
benchmarks/: benchmark_attention.py  benchmark_memory.py  benchmark_throughput.py
configs/: deepseek_v3_2_671b.json  deepseek_v3_2_nano.json  deepseek_v3_2_small.json
configs/ablations/: baseline_dense.json  baseline_dense_nano.json  indexer_heads_2.json  indexer_heads_8.json  no_warmup.json  top_k_2048.json  top_k_256.json
output/: ablations_report.json  exp_indexer_rope.json  proof_from_pretrained.json
output/wikitext_comparison/dense/: config.json  metrics.json
scripts/: ablations.py  exp_indexer_rope.py  proof_dsa_from_pretrained.py
src/deepseek_v3_2/: __init__.py  config.py  indexer.py  model.py  train.py
src/deepseek_v3_2/scripts/: __init__.py  ablations.py  exp_indexer_rope.py  proof_dsa_from_pretrained.py
src/deepseek_v3_2/training/: __init__.py  distributed.py  dsa_trainer.py
tests/: conftest.py  test_configuration.py  test_depth.py  test_dsa_attention.py  test_dsa_indexer.py  test_indexer_rope.py  test_modeling.py  test_multi_gpu.py
